# Docgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt  configure.sh  docgen.cpp  docgen.hpp  docgen_args.hpp  docgen_exceptions.hpp  docgen_gen.hpp  docgen_options.hpp  docgen_parser.hpp  docgen_status.hpp  exceptions.hpp
benchmark/: CMakeLists.txt
benchmark/core/lex/: lexer_base_fixture.hpp  lexer_benchmark.cpp  lexer_legacy_2_benchmark.cpp  lexer_legacy_benchmark.cpp
benchmark/core/lex/data/: data_1.txt  data_2.txt  data_3.txt  data_4.txt
docs/: index.html  main.css
libs/: conanfile.txt
node_scripts/: package.json
nodejs_scripts/: package-lock.json
src/: CMakeLists.txt  docgen.cpp  exceptions.hpp  parse_file.cpp  parse_file.hpp
src/core/: comment_worker.hpp  comments_parser.hpp  ignore_parser.hpp  ignore_worker.hpp  json_writer.hpp  lex_N_parse.cpp  lex_N_parse.hpp  lexer.hpp  lexer_routines.hpp  lexer_trie.hpp  parse_feeder.cpp  parse_feeder.hpp  parse_worker.cpp  parse_worker.hpp  parser.hpp  status.hpp  symbol.hpp  tag_set.hpp  tag_worker.hpp  tags_parser.hpp  token.hpp  trie.hpp  worker_routine.hpp
src/core/lex/: lexer.cpp  lexer.hpp  lextrie.hpp  lextrie_params.hpp  status.hpp  trie.hpp
src/core/lex/experimental/: string_array_utils.hpp
src/core/lex/legacy/: lexer.hpp  lexer_routines.cpp  lexer_routines.hpp  status.hpp  symbol.hpp  token.hpp
src/core/lex/legacy_2/: lexer.cpp  lexer.hpp
src/core/lexer/: lexer.cpp  lexer.hpp  status.hpp  trie.hpp
src/core/parse/: details.hpp  parser.hpp
src/core/parse/core/: json_writer.hpp  parse_worker.hpp
src/core/parse/internal/: class_worker.hpp  comment_worker.hpp  func_worker.hpp  general_worker.hpp  ignore_worker.hpp  tag_worker.hpp  template_worker.hpp
src/core/parser_internal/: comment_worker.hpp  docgen_worker.hpp  func_worker.hpp  ignore_worker.hpp  tag_worker.hpp
src/core/utils/: array_constant.hpp  list.hpp  map.hpp  trie.hpp  trie_params.hpp  type_traits.hpp  valuelist.hpp
src/exceptions/: exceptions.hpp
src/file_io/: file_reader.hpp
src/io/: file_reader.hpp  string_reader.hpp
src/nodejs_scripts/: example_gen.js
src/parse/: parse.hpp
src/parse/core/: cache.hpp  routine.hpp  state.hpp  status.hpp  symbol.hpp
src/parser/: chunkparser.cpp  chunkparser.hpp  comments_parser.hpp  docparser.cpp  docparser.hpp  file_parser.hpp  ignore_parser.hpp  parser.cpp  parser.hpp  tags_parser.hpp
src/parser/core/: routine.hpp
src/utility/: file_deleter.hpp
test/: CMakeLists.txt
test/core/: lexer_base_fixture.hpp  lexer_routines_unittest.cpp  lexer_unittest.cpp  trie_unittest.cpp
test/core/lex/: lextrie_unittest.cpp  string_array_utils_unittest.cpp  trie_unittest.cpp
test/core/lexer/: lexer_base_fixture.hpp  lexer_unittest.cpp  trie_unittest.cpp
test/core/utils/: array_constant_unittest.cpp  list_unittest.cpp  map_unittest.cpp  trie_base_fixture.hpp  trie_params_unittest.cpp  trie_unittest.cpp  type_traits_unittest.cpp  valuelist_unittest.cpp
test/exceptions/: exceptions_unittest.cpp
test/file_io/: file_reader_unittest.cpp
test/file_io/file_io_data/: paragraph.txt
test/io/: file_reader_unittest.cpp  string_reader_unittest.cpp
test/parse/core/: read_routine_unittest.cpp  routine_fixture.hpp  routine_unittest.cpp  symbol_unittest.cpp
